# slick_siphon

./: README.md  pyproject.toml
main/slick_siphon/: __init__.py  main.py
settings/extensions/python/commands/: ensure_pip_modules
