[tool.poetry]
name = "slick_siphon"
version = "0.1.2"
description = "The clean way to extend existing functions"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/slick_siphon.git'
license = "MIT"
main_module_path = "main/slick_siphon"

[[tool.extra.pure_python_packages]]
path = "main/slick_siphon"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"
file-system-py = "0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
